# Jirato

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
jirato/: __init__.py  helper.py
static/: app.js  index.html  styles.css
